[arx.monks.cloud] Added logos and links to investments

--- a/arx.monks.cloud/src/data/investments/0.md
+++ b/arx.monks.cloud/src/data/investments/0.md
@@ -6,6 +6,7 @@ year: 1998
 status: Realized
 business: "Telecom and internet service provider"
 website: 
+image: /assets/img/logos/col.gif
 ---
 
 Czech On Line was the largest commercial Internet service provider in the Czech Republic.
