--- a/arx.monks.cloud/src/data/investments/10.md
+++ b/arx.monks.cloud/src/data/investments/10.md
@@ -6,6 +6,7 @@ year: 2007
 status: Realized
 business: "Leasing and financial services"
 website: 
+image: /assets/img/logos/axon.jpg
 ---
 
 AXON was the largest non-bank owned financial leasing company in Hungary. AXON also owned and operated a separate real estate leasing company and an operational leasing business.
