--- a/arx.monks.cloud/src/data/investments/11.md
+++ b/arx.monks.cloud/src/data/investments/11.md
@@ -5,7 +5,8 @@ transaction: MBI
 year: 2007
 status: Realized
 business: "Manufacturer of plastic-moulded components"
-website: 
+website: https://www.tomplast.si/
+image: /assets/img/logos/tomplast.png
 ---
 
 Tomplast was a Slovenian producer of plastic components primarily for the automotive industry, which primarily served export markets.
