--- a/arx.monks.cloud/src/data/investments/12.md
+++ b/arx.monks.cloud/src/data/investments/12.md
@@ -5,7 +5,8 @@ transaction: Add-on to Lanex
 year: 2008
 status: Realized
 business: "Producer of climbing and fall protection equipment"
-website: 
+website: https://www.singingrock.cz/
+image: /assets/img/logos/singing-rock.jpg
 ---
 
 At the time of Lanex’s acquisition of Singing Rock, it was the leading Czech producer of climbing harnesses and related assortment for both industrial and sport applications, with significant global market share in its target markets.
