--- a/arx.monks.cloud/src/data/investments/14.md
+++ b/arx.monks.cloud/src/data/investments/14.md
@@ -5,7 +5,8 @@ transaction: Add-on to Tomplast
 year: 2008
 status: Current
 business: "Rubber and plastic components"
-website: 
+website: https://www.tomplast.si/
+image: /assets/img/logos/tomplast.png
 ---
 
 Unitplast was an add-on for Tomplast. Unitplast was a Slovenian manufacturer of plastic injection moulded components, which primarily served export markets.
