--- a/arx.monks.cloud/src/data/investments/15.md
+++ b/arx.monks.cloud/src/data/investments/15.md
@@ -5,7 +5,8 @@ transaction: Buy and Build
 year: 2009
 status: Realized
 business: "Pet store operator"
-website: 
+website: https://kakadu.pl/
+image: /assets/img/logos/kakadu.jpg
 ---
 
 Kakadu was the leading retailer of pet products in Poland. During the term of the ARX investment in Kakadu, the company acquired and integrated the leading Polish internet retailer of pet products.
