--- a/arx.monks.cloud/src/data/investments/16.md
+++ b/arx.monks.cloud/src/data/investments/16.md
@@ -5,7 +5,8 @@ transaction: Succession/MBO
 year: 2009
 status: Realized
 business: "Healthcare (ophthalmology clinics operator)"
-website: 
+website: https://www.lexum.cz/
+image: /assets/img/logos/lexum.jpg
 ---
 
 Lexum was the leading Czech eye surgery clinic with operations in three cities at the time of the initial ARX investment.  At exit, Lexum was operating 10 clinics in the Czech Republic and Poland.
