--- a/arx.monks.cloud/src/data/investments/17.md
+++ b/arx.monks.cloud/src/data/investments/17.md
@@ -6,6 +6,7 @@ year: 2010
 status: Realized
 business: "Healthcare (ophthalmology clinics operator)"
 website: 
+image: /assets/img/logos/lexum.jpg
 ---
 
 Intermedica was an add-on acquisition for Lexum, which has integrated into Lexum. At the time Intermedica was the largest eye clinic network in Poland.
