--- a/arx.monks.cloud/src/data/investments/18.md
+++ b/arx.monks.cloud/src/data/investments/18.md
@@ -6,6 +6,7 @@ year: 2010
 status: Realized
 business: "Construction materials"
 website: http://www.kvkholding.com
+image: /assets/img/logos/kvk.png
 ---
 
 KVK is a construction materials business operating in the Czech Republic. KVK’s products consist primarily of mortars, adhesives and bitumen membranes. KVK also operates two quarries.
