--- a/arx.monks.cloud/src/data/investments/19.md
+++ b/arx.monks.cloud/src/data/investments/19.md
@@ -5,7 +5,8 @@ transaction: Buy and Build
 year: 2010
 status: Realized
 business: "Household care and specialty chemicals"
-website: 
+website: https://www.bochemie.cz/
+image: /assets/img/logos/bochemie.png
 ---
 
 Bochemie was a diversified consumer and specialty chemicals company, with a product portfolio including  bleach, kitchen, bathroom & universal cleaners, anti-mildew products, hand dishwashing products and laundry bleaches. Due to its long-term tradition, Bochemie’s multiproduct brand SAVO was a household name in the Czech Republic and Slovakia while the Hungarian brand ULTRA had a similar position in its market.
