--- a/arx.monks.cloud/src/data/investments/2.md
+++ b/arx.monks.cloud/src/data/investments/2.md
@@ -5,7 +5,8 @@ transaction: MBI/Expansion
 year: 1998
 status: Realized
 business: "Trucking and logistics firm"
-website: 
+website: https://www.waberers.com/
+image: /assets/img/logos/hungarocamion.jpg
 ---
 
 Hungarocamion was the largest international transportation provider in Central Eastern Europe, which offered a wide range of services, including transportation management, international road transport, distribution and logistics, groupage and freight forwarding, as well as customs and border services.
