--- a/arx.monks.cloud/src/data/investments/20.md
+++ b/arx.monks.cloud/src/data/investments/20.md
@@ -5,7 +5,8 @@ transaction: Add-on to Kakadu
 year: 2010
 status: Realized
 business: "Online pet store"
-website: 
+website: https://www.telekarma.pl/
+image: /assets/img/logos/kakadu.jpg
 ---
 
 At the time that Kakadu acquired TeleKarma, it was the largest Polish internet retailer of pet products.
