--- a/arx.monks.cloud/src/data/investments/22.md
+++ b/arx.monks.cloud/src/data/investments/22.md
@@ -6,6 +6,7 @@ year: 2011
 status: Realized
 business: "Construction materials"
 website: http://www.kvkparabit.com
+image: /assets/img/logos/kvk.png
 ---
 
 At the time KVK acquired KRPA it was the largest Czech bitumen sheets producer which combined with the Parabit division (which was the strong number two at that time) allowed KVK to become the dominant market player and realize significant sales, purchasing and production synergies.
