--- a/arx.monks.cloud/src/data/investments/23.md
+++ b/arx.monks.cloud/src/data/investments/23.md
@@ -6,6 +6,7 @@ year: 2011
 status: Realized
 business: "Insecticides"
 website: 
+image: /assets/img/logos/bochemie.png
 ---
 
 At the time Bochemie acquired the Biolit brand it was the largest insecticides brand in the Czech and Slovak Republics.
