--- a/arx.monks.cloud/src/data/investments/25.md
+++ b/arx.monks.cloud/src/data/investments/25.md
@@ -5,7 +5,8 @@ transaction: Buy-out
 year: 2013
 status: Realized
 business: "Independent financial advisory"
-website: http://www.fincentrum.com
+website: http ://www.fincentrum.com
+image: /assets/img/logos/fincentrum.png
 ---
 
 Fincentrum is a financial advisory company, based in the Czech and Slovak Republics. The core of its business is independent financial advisory to households and private individuals.
