--- a/arx.monks.cloud/src/data/investments/26.md
+++ b/arx.monks.cloud/src/data/investments/26.md
@@ -6,6 +6,7 @@ year: 2014
 status: Current
 business: "Soft drinks bottler"
 website: http://www.gramexdrinks.com
+image: /assets/img/logos/gramex.png
 ---
 
 Gramex Drinks is bottler of soft drinks and fruit juices for retailers and A-brand producers utilizing PET packaging. Drinks include carbonated soft drinks, fruit beverages, ready-to-drink iced-teas, lemonades, energy drinks, sports drinks, and syrups.
