--- a/arx.monks.cloud/src/data/investments/27.md
+++ b/arx.monks.cloud/src/data/investments/27.md
@@ -6,6 +6,7 @@ year: 2014
 status: Realized
 business: "Manufacturer of window covers and related components"
 website: http://www.anwis.pl
+image: /assets/img/logos/anwis.svg
 ---
 
 Anwis is a producer of custom-made interior window coverings and window covering related components. Its offer includes dozens of products within own and third-party interior and exterior systems, including: horizontal, vertical, roller and pleated blinds.
