--- a/arx.monks.cloud/src/data/investments/29.md
+++ b/arx.monks.cloud/src/data/investments/29.md
@@ -6,6 +6,7 @@ year: 2017
 status: Current
 business: "FMCG (baby food)"
 website: http://www.deva.cz
+image: /assets/img/logos/deva-nutrition.png
 ---
 
 Deva Nutrition is a former Danone-owned high-quality facility producing baby fruit desserts and fruit drinks in glass jars and glass bottles possessing strong fresh fruit processing competencies and multiple bio and organic certifications.
