--- a/arx.monks.cloud/src/data/investments/3.md
+++ b/arx.monks.cloud/src/data/investments/3.md
@@ -5,7 +5,8 @@ transaction: Expansion
 year: 2000
 status: Realized
 business: "Publisher and distributor of computer games"
-website: 
+website: https://www.cenega.cz/
+image: /assets/img/logos/cenega.png
 ---
 
 Cenega was the largest distributor of computer games in Central Europe, operating in the Czech Republic, Poland, Slovakia and Hungary.
