--- a/arx.monks.cloud/src/data/investments/30.md
+++ b/arx.monks.cloud/src/data/investments/30.md
@@ -6,6 +6,7 @@ year: 2018
 status: Current
 business: "Mobile phone after-sales services"
 website: http://www.tmx.hu
+image: /assets/img/logos/tmx-mobile-solution.png
 ---
 
 Provider of mobile phone repairs, localization, software installation and logistics services for OEM warranty clients and insurance providers in domestic and international markets.
