--- a/arx.monks.cloud/src/data/investments/31.md
+++ b/arx.monks.cloud/src/data/investments/31.md
@@ -6,6 +6,7 @@ year: 2019
 status: Current
 business: "Aluminium-glass façade solutions"
 website: https://www.wieden.cz/
+image: /assets/img/logos/wieden.svg
 ---
 
 Provider of complex aluminium-glass façade solutions, including design, production and installation, serving both local and international markets.
