--- a/arx.monks.cloud/src/data/investments/33.md
+++ b/arx.monks.cloud/src/data/investments/33.md
@@ -6,6 +6,7 @@ year: 2019
 status: Current
 business: "Diagnostic healthcare clinic operator"
 website: https://www.fontana.si/
+image: /assets/img/logos/fontana.svg
 ---
 
 Medical Thermal Centre Fontana comprises 17 specialized outpatient services, supplemented by radiology diagnostics and a well equipped diagnostics laboratory.
