--- a/arx.monks.cloud/src/data/investments/5.md
+++ b/arx.monks.cloud/src/data/investments/5.md
@@ -5,7 +5,8 @@ transaction: MBO
 year: 2003
 status: Realized
 business: "Plastics processor"
-website: 
+website: https://ergis.eu/
+image: /assets/img/logos/egris.png
 ---
 
 Ergis was a plastics processing firm with six manufacturing plants, with four situated in Poland and two in Germany. It primarily manufactured packaging for food (PET and PVC based barrier laminates and films and printed multilayer laminates) and industrial packaging (LLDPE stretch films, thermo-shrinking PVC films and PET straps).
