--- a/arx.monks.cloud/src/data/investments/6.md
+++ b/arx.monks.cloud/src/data/investments/6.md
@@ -5,7 +5,8 @@ transaction: Buy-out
 year: 2004
 status: Realized
 business: "IT and household electricals retailer and distributor"
-website: 
+website: https://www.flanco.ro/
+image: /assets/img/logos/flanco.png
 ---
 
 Flanco was one of the largest retailers of consumer home electronics and white goods in Romania.
