--- a/arx.monks.cloud/src/data/investments/7.md
+++ b/arx.monks.cloud/src/data/investments/7.md
@@ -6,6 +6,7 @@ year: 2006
 status: Realized
 business: "Manufacturer of specialized electric motors"
 website: http://www.vues.cz
+image: /assets/img/logos/vues.jpg
 ---
 
 VUES is a producer of custom made electrical motors, servomotors, linear motors and for multiple industries in export markets. VUES’ products possess a high degree of specialized design and development, which are not met by standard mass-produced products.
