--- a/arx.monks.cloud/src/data/investments/8.md
+++ b/arx.monks.cloud/src/data/investments/8.md
@@ -5,7 +5,8 @@ transaction: Succession/MBO
 year: 2006
 status: Realized
 business: "Producer of gasket material and industrial gaskets"
-website: 
+website: https://donit.eu/
+image: /assets/img/logos/donit.svg
 ---
 
 Donit Tesnit was a leading European producer of industrial gasket sealing material and finished industrial gaskets, which were used for static sealing applications in sectors such as the power and petrochemical industries.
