--- a/arx.monks.cloud/src/data/investments/1.md
+++ b/arx.monks.cloud/src/data/investments/1.md
@@ -5,7 +5,8 @@ transaction: Buy-out/Expansion
 year: 1998
 status: Realized
 business: "Publishing group"
-website: 
+website: https://www.pwn.pl/
+image: /assets/img/logos/pwn.png
 ---
 
 PWN was a leading Polish publishing business offering scientific, educational and professional titles, such as dictionaries, encyclopaedias and textbooks.
