--- a/arx.monks.cloud/src/data/investments/21.md
+++ b/arx.monks.cloud/src/data/investments/21.md
@@ -6,6 +6,7 @@ year: 2011
 status: Realized
 business: "Construction materials"
 website: http://www.penopol.cz
+image: /assets/img/logos/kvk.png
 ---
 
 At the time KVK acquired Penopol it was a medium-sized producer of external insulation materials for walls and roofs applications. The Penopol acquisition allowed KVK to add complementary expanded polystyrene sheets to its product range and to develop a closed system of insulation solutions which completely eliminate wet processes.
