--- a/arx.monks.cloud/src/data/investments/9.md
+++ b/arx.monks.cloud/src/data/investments/9.md
@@ -5,7 +5,8 @@ transaction: MBO/Expansion
 year: 2006
 status: Current
 business: "Children’s clothing retailer"
-website: http://www.51015kids.eu
+website: https://www.51015kids.eu
+image: /assets/img/logos/5-10-15.png
 ---
 
 5.10.15 is a leading Polish retailer of children’s apparel. 5.10.15 operates its own retail network in addition to significant franchise and internet channels.
